# EulerAI

./: Dockerfile.build  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: github-action-test.yaml
eulerai/: cli.py
hack/: docs.sh  format.sh  help.awk  lint.sh
project_euler_gpt_tester/: api.py  cli.py
