[tool.poetry]
name = "EulerAI"
version = "0.1.0"
description = "Project Euler GPT Resolver"

authors = [
    "YuviGold"
]

repository = "https://github.com/YuviGold/EulerAI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
rich = "^13.3.4"
openai = "^0.27.5"
bs4 = "^0.0.1"
typer = "^0.7.0"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
cogapp = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
