[tool.poetry]
name = "EulerAI"
version = "0.1.0"
description = "Project Euler GPT Resolver"

authors = [
    "YuviGold"
]

repository = "https://github.com/YuviGold/EulerAI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
rich = "^13.7.0"
openai = "^1.3.5"
bs4 = "^0.0.1"
typer = "^0.9.0"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
flake8 = "^6.1.0"
cogapp = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
